# spektra

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: matplotlib_dash.py  plotly_dash.py
header/: create_header.py
spektra/: __init__.py  themes.py
spektra/themes/: ash.json  ember.json  neon.json  raiden.json  sakura.json
